Minor fixes
Fixed some spacing issues as well as the "services" section spilling out if its parent div.

--- a/queries.css
+++ b/queries.css
@@ -222,6 +222,11 @@
 }
 
 @media (max-width: 48em) {
+  .section-services {
+    height: 175rem;
+    width: auto;
+  }
+
   .wedding-cards {
     display: flex;
     flex-direction: column;
@@ -266,8 +271,9 @@
     position: static;
     margin: 0 auto;
     text-align: center;
-    transform: translateY(-80%);
-    color: #333;
+    transform: translateY(-90%);
+    color: rgba(51, 51, 51, 0.69);
+    animation: all 0.2s ease-out;
   }
 
   #weddings-year-2020 {
@@ -293,6 +299,10 @@
 }
 
 @media (max-width: 38em) {
+  .about-header {
+    padding-bottom: 2.4rem;
+  }
+
   .top-container {
     padding: 0;
   }
@@ -322,7 +332,7 @@
 
 @media (max-width: 42.5em) {
   .slide:first-child {
-    background: url(/img/MiKall-Jacob-Gallery/mikall-jacob-1.webp) no-repeat 65% /
+    background: url(/img/MiKall-Jacob-Gallery/mikall-jacob-1.webp) no-repeat 63% /
       cover;
   }
 
